@@ -1,7 +1,5 @@
 AUX 1.2.2/ipa-client-1.2.2-gentoofy.patch 3370 RMD160 03f6d7bd2ff522ff85ce8ad031f06a3f9721ad85 SHA1 12486e5708fcd4c6d22b7018921fc391cf14b450 SHA256 460f27f50ebc66b03bdda687373444867c6bbc88059620051a16ea0e042fa3d2
-DIST freeipa-1.2.1.tar.gz 534879 RMD160 1d64a27ab7cac9886acc2308cc34ae3baf040457 SHA1 73563220907ce716db808b3f9bf591a47f13b5ec SHA256 463bf57ea82e068e53dc3a6076594ab36f8ca8fe8eadd40964b4cd0026b0d1d0
 DIST freeipa-1.2.2.tar.gz 528651 RMD160 aadd3121f8ef986f14a588632ac35c2ed9273955 SHA1 85e0c65db5a9b1591dce83cd9a04dde54281686d SHA256 d3721e27069d16ae96715e40fdf8c6ca85d2b793884817061267db511e2d0749
-EBUILD ipa-client-1.2.1.ebuild 1015 RMD160 e9352d348fd4fa181f391d275c6dc30637f68766 SHA1 0a7f4137ddb90b2f989217c6ca0fa5f0d0592151 SHA256 c313067f7b602dcb7365ce7d912a3639f0c3a84b675220872fccc777eb82914b
 EBUILD ipa-client-1.2.2.ebuild 1261 RMD160 a44f9dfddeb387d7fa04923477c6532fb4a0a42e SHA1 a0abff6502ecf321f9cdd05f8e39e30f71830638 SHA256 2aceb9814daebb8fbcd941eb11887784765dcbb34bde5054b8da3400bec046a8
-MISC ChangeLog 503 RMD160 a9f0ecb17db2e4accf78a60ad2f78b163fceb030 SHA1 34fb982c54fc0c86b0e31a6e79fcd2f17fa8db1d SHA256 f3ed5ff7d82223f0dde67d5163ed6e31ad991beaaf3d8d520a8c04afeeaa06f7
+MISC ChangeLog 592 RMD160 a695430c1e9236a681ce1787372a48c352e97846 SHA1 a8d7ca9136b42ebbd2e8a6daf63bab5c6525f035 SHA256 c02fd75ff0b3246aa133673cfd7a7bc5267e3913b156420ab333a7c5e2dbc17f
 MISC metadata.xml 448 RMD160 f2dce9b0b06383d1545d67b1704976de8d2dcf36 SHA1 53c4f94ad08b175fe1828e96fa4f78869ed51ef1 SHA256 73b494760e617fd4020b42fda398df008d5507c07aa149eb417925929fe04667
