@@ -2,9 +2,7 @@ AUX 1.2.2/ipa-server-1.2.2-gentoofy.patch 8368 RMD160 d76bbd5ffcaba2f60bf1c16bf6
 AUX gentoo-configure-ac.patch 1724 RMD160 9d2e174721768df5f79b56f6b20a9fd937819601 SHA1 353b47b9ee8dc1e4612c75d96db71137dfc35e52 SHA256 a9f6418ce0e6721de660089394de1b2564c66b2e2588dad14fa6b2dbff291138
 AUX ipa_kpasswd 542 RMD160 f24c919b65cfc1a32fcf86341063d487af28e3ab SHA1 4e57404dc699a968b70297146fde60b8f14aaa60 SHA256 12c4c88e54acca7c380c71181bc5e0f0cfbcea0541338f63da1cf000ef51a970
 AUX ipa_webgui 782 RMD160 d4018de5b90217fbef07a3223a39bff1b3dfc586 SHA1 2564a2d9d46619bdb6023df33b31fc59b59b3ee9 SHA256 fdd23c366e4ef438d0f28dee31025d2ba31b7d7f7d3bd6bfce13c12db5b7566e
-DIST freeipa-1.2.1.tar.gz 534879 RMD160 1d64a27ab7cac9886acc2308cc34ae3baf040457 SHA1 73563220907ce716db808b3f9bf591a47f13b5ec SHA256 463bf57ea82e068e53dc3a6076594ab36f8ca8fe8eadd40964b4cd0026b0d1d0
 DIST freeipa-1.2.2.tar.gz 528651 RMD160 aadd3121f8ef986f14a588632ac35c2ed9273955 SHA1 85e0c65db5a9b1591dce83cd9a04dde54281686d SHA256 d3721e27069d16ae96715e40fdf8c6ca85d2b793884817061267db511e2d0749
-EBUILD ipa-server-1.2.1.ebuild 1363 RMD160 cfb7b8ea30af9c1c2f4fdc1e0553faf8f8b30b87 SHA1 efe0bdd0c8a707de541aef9845ee64f57e0bf39d SHA256 bf7f5e5d553a8e3dea71bb58c75ff2df243e602aeda7cd0285c550c5d49258cb
 EBUILD ipa-server-1.2.2.ebuild 1419 RMD160 7ff84a51304db18a89ca3b18a35e2120ac04d080 SHA1 7292e0cebe2289f8686f5d63b7cfab795baf1bea SHA256 044d8f756bc652f59ddf463d23696f0a53544cf2057bea4a3a29bb3b5e9aa7ed
-MISC ChangeLog 528 RMD160 3204374bd51c6519fd5c4c339d4d5272d906ca35 SHA1 3637b2355946f0574d1d62db1108b9e628a96af7 SHA256 547cc9af7545216fc1bd5ae286744450ca23727c0ec3ca45011e6753bfa72186
+MISC ChangeLog 617 RMD160 eb063c296a0a3758cdebff3e9dc989814e31655d SHA1 20f697229743df1cd9d558343b25667b4a034ba6 SHA256 65a12058e889051a967a0c46c2847d642fee7d733952f265eea788df4bf2c23d
 MISC metadata.xml 436 RMD160 4fb9721152d9f7dabbb0be8d68232cfd6af2336f SHA1 e0722e5c3ee4ff4f8eda76bea06c344c97bde0ed SHA256 2fa0d06ed3f2af2e3c0bca31c946b3181cb3694d4a6dcb6490d594c35d8e1431
